@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-20T00:39:09Z",
-  "count_outdated" : 1641,
-  "uniques_outdated" : 99,
+  "timestamp" : "2022-06-22T16:09:22Z",
+  "count_outdated" : 1642,
+  "uniques_outdated" : 100,
   "count" : 1690,
   "uniques" : 105,
   "views" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
